[gd_scene load_steps=2 format=2]

[ext_resource path="res://ObstacleSpawner.gd" type="Script" id=1]

[node name="ObstacleSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 64 )

[node name="Position2D2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 256 )

[node name="Position2D3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 448 )

[node name="Position2D4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 640 )

[node name="Position2D5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 832 )

[node name="Position2D6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 1024 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 10.0
